# posteriordb

./: .gitignore  README.md  asv.conf.json  pyproject.toml
.github/workflows/: posteriordb_content.yml
benchmarks/: __init__.py  bench_inference.py
doc/: CONTRIBUTING.md  DATABASE_CONTENT.md
posterior_database/models/info/: eight_schools_noncentered.info.json  prophet.info.json
posterior_database/models/pymc/: eight_schools_noncentered.py  prophet.py
src/posteriordb/: __init__.py  benchmark.py  data.py  database.py  model.py  posterior.py  reference_posterior.py  utils.py
tests/: __init__.py  conftest.py  posteriordb.py  test_aliases.py  test_api.py  test_data.py  test_models.py  test_posteriors.py  test_reference_posteriors.py  test_references.py
