[project]
name = "posteriordb"
version = "0.1.0"
description = "Python interface to the posterior database"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Mans Magnusson" },
    { name = "Christopher Fonnesbeck" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/posteriordb"]

[tool.basedpyright]
typeCheckingMode = "standard"
reportAttributeAccessIssue = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
python = ">=3.10"
pytest = ">=7.0"
bibtexparser = ">=1.4"
cmdstanpy = ">=1.2"
pymc = ">=5.0"
numpy = ">=1.20"
scipy = ">=1.10"
asv = ">=0.6"

[tool.pixi.tasks]
test = { cmd = "pytest tests/ -v", env = { PYTHONPATH = "src" } }
benchmark = { cmd = "asv run --python=same", env = { PYTHONPATH = "src" } }
benchmark-quick = { cmd = "asv run --python=same --quick", env = { PYTHONPATH = "src" } }
benchmark-dev = { cmd = "asv dev", env = { PYTHONPATH = "src" } }
benchmark-compare = "asv compare"
benchmark-publish = "asv publish"
